[gd_scene load_steps=4 format=3 uid="uid://ctwsyo8iq6tg8"]

[ext_resource type="Script" uid="uid://c1uavjrxdvvhi" path="res://features/portals/portal.gd" id="1_pu3ti"]

[sub_resource type="Environment" id="Environment_lglwc"]
background_mode = 1
background_color = Color(1, 1, 1, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_fyvk7"]
viewport_path = NodePath("sub_viewport")

[node name="portal" type="Node2D"]
script = ExtResource("1_pu3ti")

[node name="_line" type="Line2D" parent="."]
points = PackedVector2Array(0, -32, 0, 32)
width = 4.0
default_color = Color(0, 0.204489, 0.399983, 1)

[node name="sub_viewport" type="SubViewport" parent="."]
editor_description = "This viewport is a surface onto which the recording of the destination is projected. Its texture can then be read to access the view onto the 'pair' portal."
disable_3d = true
size = Vector2i(2048, 2048)

[node name="world_environment" type="WorldEnvironment" parent="sub_viewport"]
environment = SubResource("Environment_lglwc")

[node name="camera_2d" type="Camera2D" parent="sub_viewport"]

[node name="view" type="Node2D" parent="."]

[node name="on_screen_notifier" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-32, -64, 64, 128)

[node name="texture_storage" type="Polygon2D" parent="."]
editor_description = "Stores a link to this portal's viewport texture in its own texture property for easy access. This prevents the need for dealing with node/property paths from script."
visible = false
texture_repeat = 2
texture = SubResource("ViewportTexture_fyvk7")

[node name="central_dot" type="ColorRect" parent="."]
visible = false
offset_right = 4.0
offset_bottom = 4.0
color = Color(1, 0, 0, 1)

[connection signal="screen_exited" from="on_screen_notifier" to="." method="clear_view"]
